--- a/doc/daemonset-install.yaml
+++ b/doc/daemonset-install.yaml
@@ -35,6 +35,14 @@ rules:
   - update
   - patch
   - delete
+-apiGroups:
+  - '*'
+  resources:
+  - pods
+  verbs:
+  - get
+  - list
+  - watch
 ---
 apiVersion: apps/v1
 kind: DaemonSet
