--- a/doc/daemonset-install.yaml
+++ b/doc/daemonset-install.yaml
@@ -1,4 +1,18 @@
 apiVersion: v1
+data:
+  appid: ZHVtbXk=
+  password: Vk13YXJlMSFWTXdhcmUxIQ==
+  type: bnN4dGlwYW0=
+  url: MTkyLjE2OC4xMDAuMzI=
+  username: YWRtaW4=
+kind: Secret
+metadata:
+  name: whereabouts-ipam
+  namespace: kube-system
+type: Opaque
+
+---
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: whereabouts
@@ -94,6 +108,8 @@ spec:
           mountPath: /host/opt/cni/bin
         - name: cni-net-dir
           mountPath: /host/etc/cni/net.d
+        - name: ipam
+          mountPath: /var/ipam
       volumes:
         - name: cnibin
           hostPath:
@@ -101,3 +117,6 @@ spec:
         - name: cni-net-dir
           hostPath:
             path: /etc/cni/net.d
+        - name: ipam
+          secret:
+            secretName: whereabouts-ipam
